edit after changing html css and js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script type="text/javascript">
     function pingPongClick() {
       console.log("Clicked");
-      console.log(document.getElementById("txt_pp").value);
+      var number = document.getElementById("txt_pp").value;
+      for (var number)
     }
   </script>
 </head>
