--- a/index.html
+++ b/index.html
@@ -5,24 +5,20 @@
   <meta charset="utf-8">
   <title></title>
   <link rel='stylesheet' href='css/styles.css' type='text/css' />
-  <script type="text/javascript">
-    function pingPongClick() {
-      console.log("Clicked");
-      console.log(document.getElementById("txt_pp").value);
-    }
+  <script type="text/javascript" src="js/script.js">
   </script>
 </head>
 
 
 <body>
   <h1>Ping-Pong</h1>
-  <!-- <div class="about">
+  <div class="about">
     <h2>About Ping-Pong</h2>
     <h3>created by</h3>
     <p>syam kerai</p>
     <h3>Github username</h3>
     <p>syamkerai</p>
-  </div> -->
+  </div>
   <div class="play">
     <h2>Let's play!</h2>
     <h4>Rules</h4>
@@ -34,7 +30,7 @@
     </ol>
     <strong>Enter your number here:</strong><input type="number" name="pingpong" value="" id="txt_pp" />
     <button type="button" name="btnping" onclick="pingPongClick()">Ping pong</button>
-    <ol>
+    <ol id="ans">
 
     </ol>
   </div>
