fixed html for about me and git repo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h3>created by</h3>
     <p>syam kerai</p>
     <h3>Github username</h3>
-    <p>syamkerai</p>
+    <p>syamkerai.</p>
   </div>
   <div class="play">
     <h2>Let's play!</h2>
