fixed java with html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li>Numbers divisible by 3 and 5 and becomes "pingpong"</li>
     </ol>
     <strong>Enter your number here:</strong><input type="number" name="pingpong" value="" id="txt_pp" />
-    <button type="button" name="btnping" onclick="pingPongClick()">Ping pong</button>
+    <button type="button" name="btnping" onclick="pingPongClick()">Ping Me</button>
     <ol id="ans">
 
     </ol>
